force-app/main/default/objects/Form_Results__c/Form_Results__c.object-meta.xml
<CustomObject>
    <label>Form Result</label>
    <nameField>
        <displayFormat>FR #{0000}</displayFormat>
        <label>Form Results Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Form Results</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>