force-app/main/default/objects/Form_Results__c/fields/Consent_to_store_info__c.field-meta.xml
<CustomField>
    <fullName>Consent_to_store_info__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Consent to store info</label>
    <type>Checkbox</type>
</CustomField>