force-app/main/default/objects/Form_Results__c/fields/Covid_19_Test_Date__c.field-meta.xml
<CustomField>
    <fullName>Covid_19_Test_Date__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Covid 19 Test Date</label>
    <type>Date</type>
</CustomField>