force-app/main/default/objects/Form_Results__c/fields/Days_14_of_symptoms__c.field-meta.xml
<CustomField>
    <fullName>Days_14_of_symptoms__c</fullName>
    <defaultValue>false</defaultValue>
    <label>14 days of symptoms</label>
    <type>Checkbox</type>
</CustomField>