force-app/main/default/objects/Form_Results__c/fields/Estimated_Date_of_first_symptom__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Date_of_first_symptom__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Estimated Date of first symptom</label>
    <type>Date</type>
</CustomField>