force-app/main/default/objects/Form_Results__c/fields/Estimated_date_of_last_symptom__c.field-meta.xml
<CustomField>
    <fullName>Estimated_date_of_last_symptom__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Estimated date of last symptom</label>
    <type>Date</type>
</CustomField>