force-app/main/default/objects/Form_Results__c/fields/Other_Referral_Org__c.field-meta.xml
<CustomField>
    <fullName>Other_Referral_Org__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Other Referral Org</label>
    <length>255</length>
    <type>Text</type>
</CustomField>