force-app/main/default/objects/Form_Results__c/fields/Participant_Enrollment__c.field-meta.xml
<CustomField>
    <fullName>Participant_Enrollment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Participant Enrollment</label>
    <referenceTo>Participant_Enrollment__c</referenceTo>
    <relationshipLabel>Form Results</relationshipLabel>
    <relationshipName>Form_Results</relationshipName>
    <type>Lookup</type>
</CustomField>