force-app/main/default/objects/Form_Results__c/fields/Positive_for_COVID_19__c.field-meta.xml
<CustomField>
    <fullName>Positive_for_COVID_19__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Positive for COVID-19?</label>
    <type>Checkbox</type>
</CustomField>