force-app/main/default/objects/Form_Results__c/fields/Refering_Orgs__c.field-meta.xml
<CustomField>
    <fullName>Refering_Orgs__c</fullName>
    <label>Referring Orgs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Covid Plasma Save a Life</fullName>
            </value>
            <value>
                <fullName>Kamin Health Urgent Case</fullName>
            </value>
            <value>
                <fullName>Nassau/Suffolk County</fullName>
            </value>
            <value>
                <fullName>NYC DOH</fullName>
            </value>
            <value>
                <fullName>NYPD (LBA)</fullName>
            </value>
            <value>
                <fullName>NYS</fullName>
            </value>
            <value>
                <fullName>Westchester County</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>