force-app/main/default/objects/Form_Results__c/fields/Referral_Org__c.field-meta.xml
<CustomField>
    <fullName>Referral_Org__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Referral Org</label>
    <length>255</length>
    <type>Text</type>
</CustomField>